#175 -Wconversion -Wpointer-arith option addition

--- a/tests/libunwind/host/CMakeLists.txt
+++ b/tests/libunwind/host/CMakeLists.txt
@@ -4,3 +4,6 @@
 add_executable(libunwind_host host.cpp)
 
 target_link_libraries(libunwind_host oehostapp)
+target_compile_options(libunwind_host PRIVATE
+    -Wno-error=conversion
+    )
