--- a/3rdparty/libcxx/CMakeLists.txt
+++ b/3rdparty/libcxx/CMakeLists.txt
@@ -54,7 +54,7 @@ add_library(oelibcxx_cxx STATIC
     libcxx/src/vector.cpp
     )
 
-target_compile_options(oelibcxx_cxx PRIVATE -std=c++14)
+target_compile_options(oelibcxx_cxx PRIVATE -std=c++14 -Wno-error=conversion)
 target_compile_definitions(oelibcxx_cxx PRIVATE
     -DLIBCXXRT
     -D_LIBCPP_PROVIDES_DEFAULT_RUNE_TABLE
