--- a/3rdparty/libcxxrt/CMakeLists.txt
+++ b/3rdparty/libcxxrt/CMakeLists.txt
@@ -8,9 +8,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-tautological-compare")
 # build cxxrt sources passing additional options
 add_subdirectory(libcxxrt/src)
 target_compile_options(cxxrt-static PRIVATE
-    -fPIC
+    -fPIC 
+    -Wno-conversion 
     # cannot use add_link_libraries on out-of-dir target
     -nostdinc $<$<COMPILE_LANGUAGE:CXX>:-nostdinc++>
     -I${OE_INCDIR}/openenclave/libc
+    )
+target_compile_options(cxxrt-shared PRIVATE
+    -Wno-conversion 
     )
 add_dependencies(cxxrt-static oelibc_includes)
