--- a/tests/ecall_ocall/host/CMakeLists.txt
+++ b/tests/ecall_ocall/host/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(ecall_ocall_host
     host.cpp
     )
 target_compile_options(ecall_ocall_host PRIVATE
+    -Wno-error=conversion
     $<$<COMPILE_LANGUAGE:CXX>:-std=c++14>
     )
 target_link_libraries(ecall_ocall_host oehostapp)
