--- a/tests/libcxx/enc/CMakeLists.txt
+++ b/tests/libcxx/enc/CMakeLists.txt
@@ -19,6 +19,7 @@ target_compile_options(libcxxtest-support PRIVATE
     -Wno-error=strict-overflow
     -Wno-error=unused-local-typedefs
     -Wno-error=unused-variable
+    -Wno-error=conversion
     )
 
 if (CMAKE_CXX_COMPILER_ID MATCHES GNU)
