--- a/tests/libcxx/host/CMakeLists.txt
+++ b/tests/libcxx/host/CMakeLists.txt
@@ -4,3 +4,6 @@
 add_executable(libcxx_host host.cpp)
 target_compile_options(libcxx_host PRIVATE -std=c++14)
 target_link_libraries(libcxx_host oehostapp)
+target_compile_options(libcxx_host PRIVATE
+    -Wno-error=conversion
+    )
