--- a/tests/report/enc/CMakeLists.txt
+++ b/tests/report/enc/CMakeLists.txt
@@ -8,6 +8,7 @@ oeedl_file(../tests.edl enclave gen)
 add_executable(report_enc enc.cpp datetime.cpp ${gen})
 
 target_compile_options(report_enc PRIVATE
+    -Wno-error=conversion
     $<$<COMPILE_LANGUAGE:CXX>:-std=c++11>
 )
 
