Add `-Wjump-misses-init` explicitly to intended targets
This flag is included in the superset `-Wc++-compat`; however, this
introduces too many other warnings, so for now it's still included by
itself. Note also that it is not supported by Clang, but only GCC.

--- a/enclave/core/CMakeLists.txt
+++ b/enclave/core/CMakeLists.txt
@@ -45,6 +45,10 @@ target_include_directories(oecore SYSTEM PRIVATE ${OE_C_COMPILER_INCDIR})
 # This directory contains dummy C headers needed by dlmalloc:
 target_include_directories(oecore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dlmalloc)
 
+if (CMAKE_C_COMPILER_ID MATCHES GNU)
+    target_compile_options(oecore PRIVATE -Wjump-misses-init)
+endif ()
+
 target_compile_options(oecore PUBLIC
     -m64
     -fPIC
