--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -95,6 +95,11 @@ if(UNIX)
 target_compile_options(oehost PRIVATE -Wno-attributes -Wmissing-prototypes -fPIC -m64)
 target_compile_definitions(oehost PRIVATE _GNU_SOURCE)
 endif(UNIX)
+
+if(CMAKE_C_COMPILER_ID MATCHES GNU)
+target_compile_options(oehost PRIVATE -Wjump-misses-init)
+endif()
+
 target_compile_definitions(oehost PRIVATE OE_BUILD_UNTRUSTED)
 
 # Additional compilation and link options when using libsgx
