Allow enclave executables to use both C and C++.
Previously, oelibcxx unconditionally added libcxx to the include path.
When a C file includes a header that is common between C and C++ say
stdint.h, the C++ version would be picked up which has C++ syntax
(extern "C") and causes compile errors.

This fix changes 3rdparty/libcxx so that the c++ include path is added
only if the file being compiled is a cpp file. This is enforced
via the COMPILE_LANGUAGE:CXX generator expression.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ add_subdirectory(libc)
 add_subdirectory(libcxx)
 add_subdirectory(libcxxrt)
 add_subdirectory(memory)
+add_subdirectory(mixed_c_cpp)
 add_subdirectory(ocall)
 add_subdirectory(ocall-alloc)
 add_subdirectory(ocall-create)
