--- a/tests/oeedger8r/host/CMakeLists.txt
+++ b/tests/oeedger8r/host/CMakeLists.txt
@@ -1,13 +1,20 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 
+
+if (UNIX)
+    set(OEEDGER8R_COMMAND oeedger8r)
+else()
+    set(OEEDGER8R_COMMAND oeedger8r.exe)
+endif()
+
 add_custom_command(
     # Produce single untrusted file
     OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/all_u.c
 
     # Run edger8r
     COMMAND 
-        ${OE_BINDIR}/oeedger8r ${CMAKE_CURRENT_SOURCE_DIR}/../edl/all.edl 
+        ${OE_BINDIR}/${OEEDGER8R_COMMAND} ${CMAKE_CURRENT_SOURCE_DIR}/../edl/all.edl 
             --search-path ${CMAKE_CURRENT_SOURCE_DIR}/../edl
             --untrusted
 
@@ -18,7 +25,7 @@ add_custom_command(
     # Without the explicity dependecy to the binary below, running make on a test
     # will rebuild the edger8r if it is out of date, but will not invoke the newly build edger8r
     # on the edl file.    
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../edl/*.edl oeedger8r ${OE_BINDIR}/oeedger8r
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../edl/*.edl oeedger8r ${OE_BINDIR}/${OEEDGER8R_COMMAND}
 )
 
 add_executable(edl_host 
@@ -34,6 +41,6 @@ add_executable(edl_host
 )
 
 target_include_directories(edl_host PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/..)
-target_compile_options(edl_host PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-std=c++11>)
+set(CMAKE_CXX_STANDARD 11)
 
 target_link_libraries(edl_host oehostapp)
